--- a/client/src/components/Dashboard.css
+++ b/client/src/components/Dashboard.css
@@ -12,8 +12,7 @@
 }
 
 .welcome-message {
-    flex: 1;
-    margin-right: 20px;
+    margin-left: 5%;
 }
 
 .logout-button {
@@ -26,6 +25,10 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
+}
+
+.logout-button:hover {
+    background-color: #970d1b;
 }
 
 .dashboard-content {
@@ -41,6 +44,44 @@
 .chart {
     flex: 1;
     margin: 0 10px;
+    padding: 30px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    background-color: #ffffff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.chart.login-count {
+    flex: 1;
+    margin: 0 10px;
+    padding: 30px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    background-color: #ffffff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+}
+
+.chart.login-count h4 {
+    margin-bottom: 20px;
+    font-size: 24px;
+    color: #333;
+}
+
+.chart.login-count p {
+    margin: 5px 0;
+    font-size: 18px;
+    color: #555;
+}
+
+.chart.login-count p.total {
+    margin-top: 20px;
+    font-weight: bold;
+    font-size: 20px;
+    color: #000;
+    border-top: 1px solid #ccc;
+    padding-top: 10px;
 }
 
 .table-container {
