--- a/client/src/components/Auth.css
+++ b/client/src/components/Auth.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #d8fdc8;
+    background-color: #ebdfef;
 }
 
 .auth-box {
@@ -43,7 +43,7 @@
     width: 100%;
     padding: 10px;
     margin-top: 10px;
-    background-color: #037807;
+    background-color: #7a4398;
     color: white;
     border: none;
     border-radius: 5px;
@@ -51,7 +51,7 @@
 }
 
 .auth-box button:hover {
-    background-color: #093a01;
+    background-color: rgb(94, 22, 111);
 }
 
 .social-login {
